# kyrs_5

./: README.md  main.py  pyproject.toml
src/: config.py  db_manager.py  hh_api.py
